--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "clsx": "^1.1.1",
     "internal-nav-helper": "3.1.0",
     "money-clip": "3.0.2",
     "parcel-bundler": "1.12.4",
